# Escooter_Infotainement_System_OAMK_Thesis

./: .gitignore  CMakeLists.txt  README.md  dashboarddata.cpp  dashboarddata.h  datasimulator.cpp  datasimulator.h  main.cpp  main.qml  qml.qrc  routesimulator.cpp  routesimulator.h  test.qml
